# learn-autotools

./: .gitignore  Makefile.am  README.md  ac-clean.sh  configure.ac
.github/workflows/: ci.yml
include/: Makefile.am  hello.h
lib/libutil/: Makefile.am  util.c  util.h
src/: Makefile.am  hello.c  hello.cpp  hello.expected  hello.test  main.c  main.cpp
